--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^15.4.2",
     "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.1",
+    "react-three-renderer": "^3.0.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0",
