--- a/package.json
+++ b/package.json
@@ -24,14 +24,18 @@
     "body-parser": "^1.15.2",
     "classnames": "^2.2.5",
     "consolidate": "^0.14.5",
+    "d3": "^3.5",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
+    "extract-svg-path": "^2.1.0",
     "font-awesome": "^4.7.0",
     "fs-extra": "^1.0.0",
     "jquery": "^3.1.1",
     "knex": "^0.12.6",
+    "load-svg": "^1.0.0",
     "lodash": "^4.17.4",
     "marked": "^0.3.6",
+    "mesh-reindex": "^1.0.0",
     "moment": "^2.17.1",
     "mousetrap": "^1.6.0",
     "nedb": "^1.8.0",
@@ -48,7 +52,11 @@
     "semantic-ui-css": "^2.2.4",
     "sequelize": "^3.29.0",
     "sqlite3": "^3.1.8",
-    "three": "^0.83.0"
+    "svg-mesh-3d": "^1.1.0",
+    "svg-path-parser": "^1.0.1",
+    "three": "^0.83.0",
+    "three-simplicial-complex": "^69.0.6",
+    "unindex-mesh": "^2.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
