--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ejs": "^2.5.5",
     "express": "^4.14.0",
     "extract-svg-path": "^2.1.0",
+    "file-saver": "^1.3.3",
     "font-awesome": "^4.7.0",
     "fs-extra": "^1.0.0",
     "jquery": "^3.1.1",
@@ -41,6 +42,7 @@
     "nedb": "^1.8.0",
     "radium": "^0.18.1",
     "react": "^15.4.2",
+    "react-d3": "^0.4.0",
     "react-dom": "^15.4.2",
     "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.1",
@@ -54,6 +56,7 @@
     "sqlite3": "^3.1.8",
     "svg-mesh-3d": "^1.1.0",
     "svg-path-parser": "^1.0.1",
+    "svgsaver": "^0.6.2",
     "three": "^0.83.0",
     "three-simplicial-complex": "^69.0.6",
     "unindex-mesh": "^2.0.0"
